# orbtk

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  Node.toml  README.md  Thumbs.db  clippy.toml
crates/api/: Cargo.toml  README.md
crates/api/src/: lib.rs  macros.rs  prelude.rs
crates/css-engine/: Cargo.toml  README.md
crates/css-engine/src/: lib.rs  selector.rs  theme.rs
crates/orbtk_theming/: Cargo.toml
crates/orbtk_theming/src/: selector.rs
crates/orbtk_widgets/: Cargo.toml
crates/orbtk_widgets/src/: check_box.rs  cursor.rs  lib.rs  password_box.rs  popup.rs  progress_bar.rs  switch.rs  text_block.rs
crates/proc-macros/: Cargo.toml  README.md
crates/proc-macros/src/: lib.rs
crates/render/: Cargo.toml  README.md
crates/render/orbtk_render/: Cargo.toml  README.md
crates/render/orbtk_render_raqote/: Cargo.toml  README.md
crates/render/src/: common.rs  lib.rs  prelude.rs  render_target.rs
crates/shell/: Cargo.toml  README.md
crates/shell/orbtk_orbclient_shell/: Cargo.toml
crates/shell/orbtk_shell/: Cargo.toml  README.md
crates/shell/orbtk_shell_glutin/: Cargo.toml  README.md
crates/shell/orbtk_shell_minifb/: Cargo.toml  README.md
crates/shell/orbtk_shell_orbclient/: Cargo.toml  README.md
crates/shell/orbtk_shell_stdweb/: Cargo.toml  README.md
crates/shell/src/: context.rs  event.rs  lib.rs  obsolete.rs  prelude.rs  update.rs  window.rs  window_adapter.rs
crates/structs/: Cargo.toml
crates/structs/src/: border.rs  dirty_size.rs  lib.rs  spacer.rs  thickness.rs
crates/theme/: Cargo.toml  README.md
crates/theme/src/: colors.rs  dark.css  lib.rs  light.css  pop.css  prelude.rs
crates/theme_fluent/: Cargo.toml  README.md
crates/theme_fluent/assets/: colors.ron  dark.ron  fonts.ron  light.ron
crates/theme_fluent/src/: fonts.rs  lib.rs  prelude.rs
crates/theme_fluent/theme/: theme_fluent.ron  theme_fluent_colors_dark.ron  theme_fluent_colors_light.ron  theme_fluent_fonts.ron
crates/theme_redox/: Cargo.toml  README.md
crates/theme_redox/src/: fonts.rs  lib.rs  prelude.rs
crates/theme_redox/theme/: theme_redox.ron  theme_redox_colors.ron
crates/tree/: Cargo.toml  README.md
crates/tree/src/: lib.rs
crates/utils/: Cargo.toml  README.md  build.rs  colors.txt
crates/utils/src/: alignment.rs  angle.rs  border.rs  brush.rs  color.rs  const_colors.rs  direction.rs  dirty_size.rs  expression.rs  gradients.rs  lib.rs  orientation.rs  point.rs  prelude.rs  property.rs  rect.rs  rectangle.rs  relative_direction.rs  selection_mode.rs  size.rs  spacer.rs  string16.rs  text_alignment.rs  text_baseline.rs  thickness.rs  value.rs  visibility.rs
crates/web-window/: Cargo.toml
crates/web-window/src/: events.rs  lib.rs
crates/widgets/: Cargo.toml  README.md
crates/widgets/src/: button.rs  canvas.rs  canvas_three.rs  canvas_widget.rs  check_box.rs  combo_box.rs  container.rs  cursor.rs  font_icon_block.rs  grid.rs  image_widget.rs  items_widget.rs  lib.rs  list_view.rs  master_detail.rs  numeric_box.rs  overlay.rs  pager.rs  password_box.rs  popup.rs  prelude.rs  progress_bar.rs  progressbar.rs  scroll_bar.rs  scroll_indicator.rs  scroll_viewer.rs  slider.rs  stack.rs  switch.rs  tab_widget.rs  table_view.rs  text_block.rs  text_box.rs  toggle_button.rs  window.rs
localization/: Cargo.toml
orbtk/: Cargo.toml  build.rs
orbtk/examples/: 01_hello_world.rs  README.md  calculator.rs  login.rs  message.rs  minimal.rs  msg_handler.rs  multi_window.rs  popup.rs  popup_v2.rs  showcase.rs  stack.rs  table.rs  text_behavior.rs
orbtk/src/: application.rs  lib.rs  prelude.rs
orbtk_api/: Cargo.toml
orbtk_api/src/: lib.rs
orbtk_base/: Cargo.toml  build.rs  colors.txt
orbtk_base/src/: lib.rs
orbtk_base/src/utils/: alignment.rs  angle.rs  border.rs  brush.rs  dirty_size.rs  expression.rs  filter.rs  gradients.rs  mod.rs  point.rs  rectangle.rs  relative_direction.rs  selection_mode.rs  size.rs  spacer.rs  thickness.rs
orbtk_core/: Cargo.toml  README.md
orbtk_core/src/: lib.rs  macros.rs  prelude.rs  tree.rs  ui.rs  view.rs
orbtk_core/src/application/: context_provider.rs  overlay.rs  window_adapter.rs
orbtk_core/src/components/: bounds_component.rs  font_component.rs  mod.rs  orientation_component.rs  render_component.rs  text_component.rs  type_component.rs
orbtk_core/src/event/: drop.rs  editable.rs  event_adapter.rs  event_queue.rs  focus.rs  key.rs  mod.rs  system.rs  window.rs
orbtk_core/src/layout/: absolute.rs  fixed_size.rs  grid.rs  mod.rs  padding.rs  popup.rs  stack.rs  table_view.rs
orbtk_core/src/localization/: mod.rs
orbtk_core/src/properties/: mod.rs
orbtk_core/src/tree/: mod.rs
orbtk_orbclient/: Cargo.toml  README.md
orbtk_orbclient/src/: app.rs  error.rs  event.rs  lib.rs  prelude.rs  runner.rs  window.rs  window_adapter.rs  window_builder.rs
orbtk_shell/: Cargo.toml
orbtk_shell/src/: lib.rs
orbtk_tiny_skia/: Cargo.toml
orbtk_tiny_skia/src/: error.rs  font_loader.rs  lib.rs  render_context_2d.rs
orbtk_tinyskia/: Cargo.toml  README.md
orbtk_tinyskia/src/: common.rs  lib.rs  prelude.rs  render_context_2d.rs  render_target.rs
orbtk_widgets/: Cargo.toml
orbtk_widgets/src/: button.rs  check_box.rs  combo_box.rs  font_icon_block.rs  fonts.rs  image_widget.rs  items_widget.rs  lib.rs  list_view.rs  master_detail.rs  numeric_box.rs  pager.rs  password_box.rs  popup.rs  popup_v2.rs  prelude.rs  scroll_indicator.rs  slider.rs  switch.rs  tab_widget.rs  table_view.rs  text_block.rs  text_box.rs  toggle_button.rs  window.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
theme_default/: Cargo.toml
tree/: Cargo.toml
tree/src/: lib.rs
utils/: Cargo.toml  README.md  build.rs
utils/src/: alignment.rs  angle.rs  border.rs  brush.rs  color.rs  constraint.rs  dirty_size.rs  expression.rs  f32_assert.rs  f32_cmp.rs  f64_assert.rs  f64_cmp.rs  filter.rs  gradients.rs  lib.rs  number.rs  orientation.rs  point.rs  rectangle.rs  relative_direction.rs  selection_mode.rs  size.rs  string16.rs  text_alignment.rs  thickness.rs  value.rs  visibility.rs
(+1016 files in other folders)
