[package]
name = "orbtk"
version = "0.3.1-alpha4"
authors = [
    "Florian Blasius <flovanpt@posteo.de>",
    "Jeremy Soller <jackpot51@gmail.com>"
]
description = "The Orbital Widget Toolkit"
documentation = "https://docs.rs/orbtk"
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = [
    "orbital",
    "redox",
    "ui",
]
edition = "2018"

[lib]
name = "orbtk"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[dependencies]
orbtk_proc_macros = { version = "0.3.1-alpha4", path = "crates/proc_macros" }
orbtk_api = { version = "0.3.1-alpha4", path = "crates/api", default-features = false }
orbtk_render = { version = "0.3.1-alpha4", path = "crates/render", default-features = false }
orbtk_shell = { version = "0.3.1-alpha4", path = "crates/shell", default-features = false }
orbtk_theme = { version = "0.3.1-alpha4", path="crates/theme" }
orbtk_theming = { version = "0.3.1-alpha4", path="crates/theming" }
orbtk_utils = { version = "0.3.1-alpha4", path = "crates/utils" }
orbtk_tree = { version = "0.3.1-alpha4", path="crates/tree" }
orbtk_widgets = { version = "0.3.1-alpha4", path="crates/widgets", default-features = false }
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git", branch = "develop" }

[dev-dependencies]
euc = "0.5.0"
vek = "0.10.2"
serde = "1.0.106"
serde_derive = "1.0.106"

# [target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "redox")))'.dev-dependencies]
# wgpu = "0.5.0"

[features]
default = ["orbtk_shell/orbraq", "orbtk_api/orbraq", "orbtk_render/orbraq", "orbtk_widgets/orbraq"]
miniraq = ["orbtk_shell/miniraq", "orbtk_api/miniraq", "orbtk_widgets/miniraq", "orbtk_widgets/miniraq"]
glupath = ["orbtk_shell/glupath", "orbtk_render/glupath", "orbtk_widgets/glupath"]
log = ["orbtk_shell/log"]
light = ["orbtk_theme/light"]
redox = ["orbtk_theme/redox"]
debug = ["orbtk_api/debug"]
 
[workspace]
members = [
    "crates/utils",
    "crates/tree",
    "crates/proc_macros",
    "crates/api",
    "crates/render",
    "crates/shell",
    "crates/theme",
    "crates/theming",
    "crates/widgets",
]
