[package]
name = "orbtk"
version = "0.2.32"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
description = "The Orbital Widget Toolkit"
documentation = "https://docs.rs/orbtk"
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = [
    "orbital",
    "redox",
    "ui",
]

[lib]
name = "orbtk"
path = "src/lib.rs"

[dependencies]
orbclient = { git = "https://gitlab.redox-os.org/redox-os/orbclient.git" }
orbfont = { git = "https://gitlab.redox-os.org/redox-os/orbfont.git", branch = "develop" }
orbimage = { git = "https://gitlab.redox-os.org/redox-os/orbimage.git", branch = "develop" }
cssparser = "0.16.1"
lazy_static = "1.4.0"
