[package]
name = "orbtk_localization"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Localization crate used to localize strings. Part of OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["ui", "localization"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
ron ={ version = "0.6", optional = true }

[features]
default = ["local_ron"]
local_ron = ["serde", "serde_derive", "ron"]
