[package]
authors = [
    "Florian Blasius <flovanpt@posteo.de>",
    "Jeremy Soller <jackpot51@gmail.com>"
]
description = "The Orbital Widget Toolkit"
documentation = "https://docs.rs/orbtk"
edition = "2018"
keywords = [
    "orbital",
    "redox",
    "ui",
]
license = "MIT"
name = "orbtk"
readme = "README.md"
repository = "https://github.com/redox-os/orbtk"
version = "0.3.1-alpha5"

[dependencies]
orbtk_proc_macros = { version = "0.3.1-alpha5", path = "../proc_macros" }
orbtk_core = { version = "0.3.1-alpha5", path = "../orbtk_core", default-features = false }
orbtk_tinyskia = { version = "0.3.1-alpha5", path = "../orbtk_tinyskia", default-features = false }
orbtk_orbclient = { version = "0.3.1-alpha5", path = "../orbtk_orbclient", default-features = false }
orbtk_utils = { version = "0.3.1-alpha5", path = "../utils" }
orbtk_widgets = { version = "0.3.1-alpha5", path="../orbtk_widgets", default-features = false }

[dependencies.dces]
#version = "0.3.1"
git = "https://gitlab.redox-os.org/redox-os/dces-rust.git"
branch = "master"
#branch = "develop"

[dev-dependencies]
euc = "0.5.0"
vek = { version = "0.15.7", default-features = false, features = ["rgb", "rgba"] }
serde = "1.0.106"
serde_derive = "1.0.106"

[features]
log = ["orbtk_orbclient/log"]
debug = ["orbtk_core/debug"]
bundled = ["orbtk_orbclient/bundled"]

[lib]
name = "orbtk"
path = "src/lib.rs"
