[package]
name = "orbtk_base"
version = "0.4.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Base crate of OrbTk with all mandatory stuff."
edition = "2018"
keywords = ["gui", "ui", "ecs"]

[dependencies]
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "develop" }