[package]
name = "orbtk_orbclient"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Window shell crate used by OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["shell", "window", "ui"]
edition = "2018"

[lib]
doctest = false

[dependencies]
lazy_static = "1.4.0"
raw-window-handle = "0.3"
image = { version = "0.23",  default-features = false, features = ["ico"] }
orbclient = "0.3.31"
sdl2 = { version = "0.34", features = ["bundled", "static-link", "raw-window-handle"] }

# orbtk
orbtk_tinyskia = { path = "../orbtk_tinyskia", version = "0.3.1-alpha4", default-features = false }
orbtk_utils = { path = "../utils", version = "0.3.1-alpha4" }

[features]
log = []