[package]
name = "orbtk_orbclient"
version = "0.3.1-alpha5"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Window shell crate used by OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["shell", "window", "ui"]
edition = "2018"

[dependencies]
orbclient = { version = "0.3.32", default-features = false }
lazy_static = { version = "1.4.0" }
image = { version = "0.24",  default-features = false, features = ["ico"] }
orbtk_tinyskia = { path = "../orbtk_tinyskia", version = "0.3.1-alpha5", default-features = false }
orbtk_utils = { path = "../utils", version = "0.3.1-alpha5" }
raw-window-handle = { version = "0.4" }

[features]
log = []
bundled = ["sdl2/bundled", "sdl2/static-link", "orbclient/bundled"]

[lib]
doctest = false

[target.'cfg(not(target_os = "redox"))'.dependencies]
sdl2 = { version = "0.35", features = ["raw-window-handle"] }
