[package]
name = "orbtk_shell"
version = "0.4.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Immediate mode user interface (ui) shell for OrbTk."
edition = "2018"
keywords = ["gui", "ui", "ecs"]

[dependencies]
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "develop" }