[package]
name = "orbtk_shell"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Immediate mode user interface (ui) shell for OrbTk."
edition = "2018"
keywords = ["gui", "ui", "ecs"]

[dependencies]
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "before_resource" }
orbtk_api = { version = "0.3.1-alpha4", path = "../orbtk_api" }
orbtk_utils = { version = "0.3.1-alpha4", path = "../orbtk_utils" }
orbtk_render = { version = "0.3.1-alpha4", path = "../orbtk_render" }