[package]
name = "orbtk_tiny_skia"
version = "0.4.0-alpha.1"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "2D render library for OrbTk based on tiny skia."
documentation = "https://docs.rs/orbtk"
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = [
    "orbital",
    "redox",
    "ui",
    "ecs"
]
edition = "2018"

[dependencies]
orbtk_core = { path = "../orbtk_core" }
tiny-skia = "0.5.1"
rusttype = "0.9.2"
font-loader = "0.11.0"
atomic_refcell = "0.1.7"