[package]
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "2D Render library use by OrbTk."
edition = "2018"
keywords = ["2D", "orbtk_tinyskia", "canvas"]
license = "MIT"
name = "orbtk_tinyskia"
readme = "README.md"
repository = "https://github.com/redox-os/orbtk"
version = "0.3.1-alpha5"

[dependencies]
orbtk_utils = { path = "../utils", version = "0.3.1-alpha5" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.24",  default-features = false, features = ["ico"] }
rusttype = { version = "0.9" }
smallvec = "1"
tiny-skia = { version = "0.6.1" }
