[package]
name = "orbtk_widgets"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Base OrbTk widget library."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["ui", "widgets"]
edition = "2018"

[dependencies]
rust_decimal = "1.7"
lazy_static = "1.4"

# orbtk
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "before_resource" }
orbtk_core = { path = "../orbtk_core", version = "0.3.1-alpha4" }
orbtk_orbclient = { path = "../orbtk_orbclient", version = "0.3.1-alpha4", default-features = false }
orbtk_tinyskia = { path = "../orbtk_tinyskia", version = "0.3.1-alpha4", default-features = false }
orbtk_utils = { path = "../utils", version = "0.3.1-alpha4" }
orbtk_proc_macros = { version = "0.3.1-alpha4", path = "../proc_macros" }