[package]
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Base OrbTk widget library."
edition = "2021"
keywords = ["ui", "widgets"]
license = "MIT"
name = "orbtk_widgets"
version = "0.3.1-alpha5"
readme = "README.md"
repository = "https://github.com/redox-os/orbtk"

[dependencies]
lazy_static = "1.4"
orbtk_core = { path = "../orbtk_core", version = "0.3.1-alpha5" }
orbtk_orbclient = { path = "../orbtk_orbclient", version = "0.3.1-alpha5", default-features = false }
orbtk_tinyskia = { path = "../orbtk_tinyskia", version = "0.3.1-alpha5", default-features = false }
orbtk_utils = { path = "../utils", version = "0.3.1-alpha5" }
orbtk_proc_macros = { version = "0.3.1-alpha5", path = "../proc_macros" }
rust_decimal = "1.15"
#rust_decimal_macros = "1.15"

[dependencies.dces]
#version = "0.3.1"
git = "https://gitlab.redox-os.org/redox-os/dces-rust.git"
branch =  "master"
#branch = "develop"

[lib]
doctest = false
