[package]
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Procedural macros used by OrbTk."
edition = "2021"
license = "MIT"
keywords = ["ui", "api"]
name = "orbtk_proc_macros"
readme = "README.md"
repository = "https://github.com/redox-os/orbtk"
version = "0.3.1-alpha5"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
case = "1.0"

[features]
debug = []