[package]
name = "orbtk_theme_default"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Default theme of OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["theme", "styling", "ui"]
edition = "2018"

[dependencies]
orbtk_theming = { path = "../theming", version = "0.3.1-alpha4" }
lazy_static = "1.4.0"