[package]
name = "orbtk_utils"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Helper utils and traits for OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["helpers", "utils", "traits", "ui"]
edition = "2018"

[dependencies]
ron = "0.6"
serde = "1.0"
derive_more = { version = "0.99", default-features = false, features = ["add", "constructor", "from", "mul"] }
lexical-core = "0.7"
phf = { version = "0.8", default-features = false }

[build-dependencies]
phf_codegen = { version = "0.8", default-features = false }