[package]
name = "orbtk_api"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "API crate that provides base api and elements for OrbTk like widgets basis."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["ui", "api"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
ron = "0.6"
memchr = "2"
dirs = "3.0"
derive_more = { version = "0.99", default-features = false, features = ["constructor"] }

# orbtk
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "develop" }
orbtk_localization = { path = "../localization", version = "0.3.1-alpha4" }
orbtk_proc_macros = { path = "../proc_macros", version = "0.3.1-alpha4" }
orbtk_utils = { path = "../utils", version = "0.3.1-alpha4" }
orbtk_tree = { path = "../tree", version = "0.3.1-alpha4" }
orbtk_render = { path = "../render", version = "0.3.1-alpha4", default-features = false }
orbtk_shell = { path = "../shell", version = "0.3.1-alpha4", default-features = false }
orbtk_theme = { path = "../theme", version = "0.3.1-alpha4" }
orbtk_theming = { path = "../theming", version = "0.3.1-alpha4" }
raw-window-handle = "0.3"

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"

[features]
default = ["orbtk_shell/orbraq"]
orbraq = ["orbtk_shell/orbraq"]
miniraq = ["orbtk_shell/miniraq", "orbtk_render/miniraq"]
glupath = ["orbtk_shell/glupath", "orbtk_render/glupath"]
debug = []
