[package]
name = "orbtk-css-engine"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "CSS engine used to theme OrbTk."
repository = "https://gitlab.redox-os.org/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["css", "theme", "styling", "ui"]
edition = "2018"

[dependencies]
orbtk-utils = { version = "0.1.0", path = "../utils" }
cssparser = "0.17.0"