[package]
name = "orbtk-css-engine"
version = "0.3.0-alpha1"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "CSS engine used to theme OrbTk."
repository = "https://gitlab.redox-os.org/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["css", "theme", "styling", "ui"]
edition = "2018"

[dependencies]
orbtk-utils = "0.3.0-alpha1"
cssparser = "0.17.0"