[package]
name = "orbtk_theming"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Theming engine of OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["theme", "styling", "ui"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
ron = "0.6"