[package]
name = "orbtk-proc-macros"
version = "0.3.0-alpha1"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Procedural macros used by OrbTk."
repository = "https://gitlab.redox-os.org/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["ui", "api"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
syn = "1.0.8"

[features]
debug = []