[package]
name = "orbtk-proc-macros"
version = "0.3.1-alpha3"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Procedural macros used by OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["ui", "api"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
syn = "1.0.17"

[features]
debug = []