[package]
name = "orbtk-render"
version = "0.3.1-alpha3"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "2D Render library use by OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["2D", "render", "canvas"]
edition = "2018"

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4.20"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "redox"), not(feature = "minifb")))'.dependencies]
pathfinder_canvas = { version = "0.5.0", features = ["pf-text"] }
pathfinder_color = "0.5.0"
pathfinder_content = "0.5.0"
pathfinder_geometry = "0.5.1"
pathfinder_gl =  "0.5.0"
pathfinder_gpu =  "0.5.0"
pathfinder_renderer =  "0.5.0"
pathfinder_resources =  "0.5.0"
# surfman = { version = "0.2.0", features = ["sm-winit"] }
image = "0.23"

[dependencies]
orbtk-utils = { path = "../utils", version = "0.3.1-alpha3" }
raqote = { version = "0.7.14", default-features = false, optional = true }
rusttype = { version = "0.8.3", optional = true }

[features]
raq = ["raqote", "rusttype"]