[package]
name = "orbtk_render"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "2D Render library use by OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["2D", "render", "canvas"]
edition = "2018"

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"
smallvec = { version = "1", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.23",  default-features = false, features = ["ico"] }

# raqote depenencies
raqote = { version = "0.8", default-features = false, optional = true }
rusttype = { version = "0.9", optional = true }
smallvec = "1"

[dependencies]
orbtk_utils = { path = "../utils", version = "0.3.1-alpha4" }

[features]
default = ["raqote", "rusttype"]
orbraq = ["raqote", "rusttype"]