[package]
name = "orbtk_shell"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Window shell crate used by OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["shell", "window", "ui"]
edition = "2018"

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4.20"
console_error_panic_hook = "0.1.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.23",  default-features = false, features = ["ico"] }
spin_sleep = { version = "1.0", optional = true }

# orbclient
orbclient = { git = "https://gitlab.redox-os.org/redox-os/orbclient.git", optional = true }

# minifb dependencies
minifb = { version = "0.18", optional = true }

# pathfinder dependencies
gl = { version = "0.14", optional = true }
glutin = { version = "0.24", optional = true }
euclid = { version = "0.20", optional = true }
font-kit = { version = "0.6", optional = true }
pathfinder_color = { version = "0.5", optional = true }
pathfinder_geometry = { version = "0.5.1", optional = true }
pathfinder_gl =  { version = "0.5", optional = true }
pathfinder_renderer =  { version = "0.5", optional = true }
pathfinder_resources =  { version = "0.5", optional = true }
raw-window-handle = "0.3"

[dependencies]
derive_more = { version = "0.99", default-features = false, features = ["constructor"] }
lazy_static = "1.4.0"

# orbtk
orbtk_render = { path = "../render", version = "0.3.1-alpha4" }
orbtk_utils = { path = "../utils", version = "0.3.1-alpha4" }

[features]
default = ["spin_sleep", "orbclient"]
orbraq = ["spin_sleep", "orbclient"]
miniraq = ["spin_sleep", "minifb"]
glupath = [
    "gl",
    "glutin",
    "euclid",
    "pathfinder_color",
    "pathfinder_geometry",
    "pathfinder_gl",
    "pathfinder_renderer",
    "pathfinder_resources",
    "font-kit"
]
log = []